--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,4 @@
-REACT_APP_MSAL_CLIENT_ID=[Enter the Client Id (Application ID obtained from the Azure portal), e.g. ba74781c2-53c2-442a-97c2-3d60re42f403]
+REACT_APP_MSAL_CLIENT_ID=dd72435d-04e6-4338-94a0-a1776e8b2e84
 REACT_APP_MSAL_AUTHORITY=https://login.microsoftonline.com/organizations
 REACT_APP_GRAPH_ENDPOINT=https://graph.microsoft.com/beta/
 REACT_APP_API1_URL=https://[API 1 URL]/api/herbs
