--- a/app/.env
+++ b/app/.env
@@ -1,7 +1,7 @@
 REACT_APP_MSAL_CLIENT_ID=dd72435d-04e6-4338-94a0-a1776e8b2e84
 REACT_APP_MSAL_AUTHORITY=https://login.microsoftonline.com/organizations
 REACT_APP_GRAPH_ENDPOINT=https://graph.microsoft.com/beta/
-REACT_APP_API1_URL=https://[API 1 URL]/api/herbs
-REACT_APP_API1_SCOPE=[API 1 URL]/api/herbs/Catalog.View.All
-REACT_APP_API2_URL=https://[API 2 URL]/api/cactus
-REACT_APP_API2_SCOPE=[API 2 URL]/api/herbs/Catalog.View.All
+REACT_APP_API1_URL=https://yellow-meadow-08e03f000.3.azurestaticapps.net/api/herbs
+REACT_APP_API1_SCOPE=api://63c184a4-3d76-47ee-9577-f6431850336b/Catalog.View.All
+REACT_APP_API2_URL=https://yellow-meadow-08e03f000.3.azurestaticapps.net/api/cactus
+REACT_APP_API2_SCOPE=api://56ab2744-76f2-4e94-8444-4fff1ae67050/Catalog.View.All
